# vcpkg_verifier

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  ecal_vcpkg_verifier.cpp  vcpkg.json
overlay_ports/ecal/: 0001-disable-app-plugins.patch  0002-fix-build.patch  0003-fix-dependencies.patch  0004-install-cmake-files-to-share.patch  0005-remove-install-prefix-macro-value.patch  0006-Use-find_dependency-in-cmake-config.patch  0007-allow-static-build-of-core.patch  portfile.cmake  usage  vcpkg.json
overlay_ports/inih/: CMakeLists.txt  portfile.cmake  unofficial-inihConfig.cmake.in  usage  vcpkg.json
samples/: CMakeLists.txt
samples/cpp/measurement/measurement_read/src/: measurement_read.cpp
src/: CMakeLists.txt  INIReaderExample.cpp
